--- a/eliminar_cliente.html
+++ b/eliminar_cliente.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
@@ -20,7 +20,7 @@
       </div>
       <div class="mb-3">
         <label for="nombre" class="form-label">Nombre del Cliente:</label>
-        <input type="text" class="form-control" id="nombre" disabled>
+        <input type="text" class="form-control bg-warning" id="nombre" disabled>
       </div>
       <div class="mb-3">
         <label for="ruta" class="form-label">Ruta (Solo números, máximo 3 caracteres):</label>
@@ -41,9 +41,8 @@
   <a href="index.html" class="btn btn-secondary floating-btn">⬅️ Volver</a>
 
   <script>
-    const URL_SCRIPT_UPLOAD = "https://script.google.com/macros/s/AKfycbxaUBfD1JT9IBtDQMhoSX77JeqsYkP5MHIkEyzQ1sxn9IHVS5i0gjrZRKOxXcjlFlULSg/exec"; // URL de tu Apps Script
+    const URL_SCRIPT_UPLOAD = "https://script.google.com/macros/s/AKfycbzBV4s5BR0193DiAUDF6fR2ZgJ53MM8PhNwITtXVyOPyBb6mzyPxRUeEDnZ_94oaWI-tw/exec";
 
-    // Función para buscar el nombre del cliente según el código
     function buscarCliente() {
       const codigo = document.getElementById("codigo").value;
       if (codigo) {
@@ -51,19 +50,11 @@
           .then(response => response.json())
           .then(data => {
             const cliente = data.find(c => c.codigo === codigo);
-            if (cliente) {
-              document.getElementById("nombre").value = cliente.nombre;
-            } else {
-              document.getElementById("nombre").value = "Cliente no encontrado";
-            }
-          })
-          .catch(error => {
-            alert("❌ Error al buscar cliente: " + error);
+            document.getElementById("nombre").value = cliente ? cliente.nombre : "Cliente no encontrado";
           });
       }
     }
 
-    // Función para validar el archivo de la foto
     function validarFoto() {
       const foto = document.getElementById('foto');
       const error = document.getElementById('foto-error');
@@ -71,15 +62,14 @@
       if (file) {
         if (file.size > 10 * 1024 * 1024 || !file.name.endsWith('.jpg')) {
           error.style.display = 'block';
-          foto.value = ''; // Limpiar el campo si el archivo no es válido
+          foto.value = '';
         } else {
           error.style.display = 'none';
         }
       }
     }
 
-    // Función para enviar el formulario
-    function enviarFormulario() {
+    async function enviarFormulario() {
       const codigo = document.getElementById("codigo").value;
       const nombre = document.getElementById("nombre").value;
       const ruta = document.getElementById("ruta").value;
@@ -92,48 +82,35 @@
       }
 
       const reader = new FileReader();
-      reader.onloadend = function () {
-        // Convertir la imagen a base64
-        const base64Foto = reader.result.split(',')[1]; // eliminar el encabezado base64
+      reader.onloadend = async function () {
+        const base64Foto = reader.result;
         const data = {
-          codigo: codigo,
-          nombre: nombre,
-          ruta: ruta,
-          motivo: motivo,
+          codigo,
+          nombre,
+          ruta,
+          motivo,
           foto: base64Foto
         };
 
-        // Enviar los datos al Google Apps Script
-        fetch(URL_SCRIPT_UPLOAD, {
+        const response = await fetch(URL_SCRIPT_UPLOAD, {
           method: 'POST',
-          headers: {
-            'Content-Type': 'application/json'
-          },
           body: JSON.stringify(data)
-        })
-        .then(response => response.json())
-        .then(data => {
-          if (data.status === 'ok') {
-            alert("✅ Cliente eliminado correctamente. Foto guardada en Google Drive.");
-            // Limpiar formulario después de enviar
-            document.getElementById("codigo").value = "";
-            document.getElementById("nombre").value = "";
-            document.getElementById("ruta").value = "";
-            document.getElementById("motivo").value = "";
-            document.getElementById("foto").value = "";
-          } else {
-            alert("❌ Error al guardar los datos.");
-          }
-        })
-        .catch(error => {
-          alert("❌ Error al enviar los datos: " + error);
         });
+
+        const result = await response.json();
+        if (result.status === 'ok') {
+          alert("✅ Cliente eliminado correctamente.");
+          document.querySelector("form").reset();
+        } else {
+          alert("❌ Error al guardar los datos.");
+        }
       };
-      reader.readAsDataURL(foto); // Leer la imagen como base64
+      reader.readAsDataURL(foto);
     }
   </script>
 </body>
 </html>
+
 
 
 
