--- a/eliminar_cliente.html
+++ b/eliminar_cliente.html
@@ -8,6 +8,30 @@
   <style>
     .floating-btn { position: fixed; bottom: 20px; right: 20px; z-index: 999; }
     #foto-error { display: none; }
+
+    /* Cambiar color de fondo del campo Nombre */
+    #nombre {
+      background-color: #f0f0f0; /* Gris claro */
+    }
+
+    /* Botón Enviar de color verde */
+    button[type="submit"] {
+      background-color: #28a745; /* Verde */
+      color: white;
+    }
+
+    button[type="submit"]:hover {
+      background-color: #218838; /* Verde oscuro */
+    }
+
+    /* Personalizar el campo de subir archivo para mostrar solo el ícono */
+    .form-control[type="file"] {
+      background-image: url('https://upload.wikimedia.org/wikipedia/commons/4/4e/Upwards_arrow.svg'); /* Ícono de subida */
+      background-repeat: no-repeat;
+      background-position: center left;
+      background-size: 20px;
+      padding-left: 30px;
+    }
   </style>
 </head>
 <body>
@@ -20,10 +44,10 @@
       </div>
       <div class="mb-3">
         <label for="nombre" class="form-label">Nombre del Cliente:</label>
-        <input type="text" class="form-control bg-warning" id="nombre" disabled>
+        <input type="text" class="form-control" id="nombre" disabled>
       </div>
       <div class="mb-3">
-        <label for="ruta" class="form-label">Ruta (Solo números, máximo 3 caracteres):</label>
+        <label for="ruta" class="form-label">Ruta:</label>
         <input type="text" class="form-control" id="ruta" maxlength="3" pattern="\d{1,3}" required>
       </div>
       <div class="mb-3">
@@ -31,17 +55,17 @@
         <input type="text" class="form-control" id="motivo" required>
       </div>
       <div class="mb-3">
-        <label for="foto" class="form-label">Subir Foto (máx. 10MB, solo .jpg):</label>
+        <label for="foto" class="form-label">Subir Foto:</label>
         <input type="file" class="form-control" id="foto" accept="image/jpeg" onchange="validarFoto()" required>
         <small id="foto-error" class="form-text text-danger">⚠️ Solo se permite archivos .jpg y hasta 10MB.</small>
       </div>
-      <button type="submit" class="btn btn-danger w-100">🗑️ Eliminar</button>
+      <button type="submit" class="btn w-100">Enviar</button>
     </form>
   </div>
   <a href="index.html" class="btn btn-secondary floating-btn">⬅️ Volver</a>
 
   <script>
-    const URL_SCRIPT_UPLOAD = "https://script.google.com/macros/s/AKfycbwAwkiBXCH5JkHAK60sVFAOYg7MXfYKPoWUtS_lhSFOGX3cjvjzPnn7auRDza1QEXrZXA/exec";
+    const URL_SCRIPT_UPLOAD = "https://script.google.com/macros/s/AKfycbzBV4s5BR0193DiAUDF6fR2ZgJ53MM8PhNwITtXVyOPyBb6mzyPxRUeEDnZ_94oaWI-tw/exec";
 
     function buscarCliente() {
       const codigo = document.getElementById("codigo").value;
@@ -110,6 +134,7 @@
   </script>
 </body>
 </html>
+
 
 
 
