--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -7,29 +6,58 @@
   <title>Portal Principal - RTM</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
+    html, body {
+      height: 100%;
+      margin: 0;
+      background: #f8f9fa;
+      display: flex;
+      flex-direction: column;
+    }
+
     .btn-lg {
       padding: 20px;
       font-size: 1.2rem;
     }
-    body {
-      background: #f8f9fa;
-    }
+
     .card {
       border-radius: 20px;
       box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
       transition: transform 0.2s ease-in-out;
     }
+
     .card:hover {
       transform: scale(1.03);
     }
+
+    .container {
+      flex: 1;
+    }
+
     footer {
       background-color: #0b0b0b;
-      padding: 20px 0;
+      padding: 20px;
+      color: white;
       text-align: center;
-      margin-top: 50px;
     }
-    footer img {
+
+    .footer-logo-top {
       max-height: 60px;
+      margin-bottom: 10px;
+    }
+
+    .footer-content {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 15px;
+    }
+
+    .footer-left-img {
+      max-height: 40px;
+    }
+
+    footer p {
+      margin: 0;
     }
   </style>
 </head>
@@ -55,9 +83,12 @@
     </div>
   </div>
 
-  <footer class="mt-5">
-    <img src="ChatGPT Image 22 abr 2025 08_25_00.png" alt="Logo RTM" />
-    <p class="text-white mt-2 mb-0">© 2025 BIA HONDURAS • Todos los derechos reservados</p>
+  <footer>
+    <img src="ChatGPT Image 22 abr 2025 08_25_00.png" alt="Logo RTM Top" class="footer-logo-top">
+    <div class="footer-content">
+      <img src="bia_logo.png" alt="Logo Izquierdo" class="footer-left-img">
+      <p>© 2025 BIA HONDURAS • Todos los derechos reservados</p>
+    </div>
   </footer>
 </body>
 </html>
