--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
     html, body {
       height: 100%;
       margin: 0;
-      background: #f8f9fa;
+      background-image: url('fondo.jpg'); /* Usa aquí el nombre real del archivo */
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
       display: flex;
       flex-direction: column;
+      color: white;
     }
 
     .btn-lg {
@@ -21,7 +25,7 @@
 
     .card {
       border-radius: 20px;
-      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.3);
       transition: transform 0.2s ease-in-out;
     }
 
@@ -34,7 +38,7 @@
     }
 
     footer {
-      background-color: #0b0b0b;
+      background-color: rgba(0, 0, 0, 0.8);
       padding: 20px;
       color: white;
       text-align: center;
@@ -80,10 +84,11 @@
 
   <footer>
     <div class="footer-content">
-      <img src="bia_logo.png" alt="Logo Izquierdo" class="footer-left-img">
+      <img src="logo_nuevo.png" alt="Logo Izquierdo" class="footer-left-img">
       <p>© 2025 BIA HONDURAS • Todos los derechos reservados</p>
     </div>
   </footer>
 </body>
 </html>
+
 
