--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     html, body {
       height: 100%;
       margin: 0;
-      background-image: url('fondo.jpg'); /* Usa aquí el nombre real del archivo */
+      background-image: url('fondo.png'); /* Usa aquí el nombre real del archivo */
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
