--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       background-repeat: no-repeat;
       display: flex;
       flex-direction: column;
-      color: white;
+      color: rgb(8, 0, 0);
     }
 
     .btn-lg {
@@ -84,7 +84,7 @@
 
   <footer>
     <div class="footer-content">
-      <img src="logo_nuevo.png" alt="Logo Izquierdo" class="footer-left-img">
+      <img src="bia_logo.png" alt="Logo Izquierdo" class="footer-left-img">
       <p>© 2025 BIA HONDURAS • Todos los derechos reservados</p>
     </div>
   </footer>
