--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     }
 
     footer {
-      background-color: rgba(0, 0, 0, 0.8);
+      background-color: #000;
       padding: 20px;
       color: white;
       text-align: center;
