--- a/index.html
+++ b/index.html
@@ -21,16 +21,45 @@
     .btn-lg {
       padding: 20px;
       font-size: 1.2rem;
+      font-weight: 600;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+      border-radius: 30px;
+      transition: all 0.4s ease;
+      border: 2px solid transparent;
+      color: white;
+      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
     }
 
-    .card {
-      border-radius: 20px;
-      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.3);
-      transition: transform 0.2s ease-in-out;
+    .btn-primary {
+      background-color: #1E90FF; /* Azul brillante */
+      border-color: #1C6BC2;
     }
 
-    .card:hover {
-      transform: scale(1.03);
+    .btn-success {
+      background-color: #32CD32; /* Verde claro */
+      border-color: #2E8B57;
+    }
+
+    .btn-warning {
+      background-color: #FFDA44; /* Amarillo vibrante */
+      border-color: #F39C12;
+    }
+
+    .btn-danger {
+      background-color: #E74C3C; /* Rojo intenso */
+      border-color: #C0392B;
+    }
+
+    .btn-info {
+      background-color: #1ABC9C; /* Turquesa */
+      border-color: #16A085;
+    }
+
+    .btn-lg:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 8px 25px rgba(0, 0, 0, 0.15);
+      color: #fff;
     }
 
     .container {
@@ -59,38 +88,38 @@
       margin: 0;
     }
 
-    /* Título con efecto arcoíris */
+    /* Título con borde minimalista */
     .title-rtm {
       font-size: 3rem;
       font-weight: bold;
-    }
-
-    .rainbow-word {
-      background: linear-gradient(270deg, #ff0000, #ff8c00, #ffff00, #00ff00, #00ced1, #1e90ff, #8a2be2, #ff1493);
-      background-size: 800% 800%;
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      animation: rainbow-move 30s linear infinite;
-      font-weight: bold;
-    }
-
-    @keyframes rainbow-move {
-      0% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-      100% { background-position: 0% 50%; }
-    }
-
-    /* Texto en negro para la parte de Portal Principal */
-    .text-black {
       color: black;
+      text-align: center;
+      position: relative;
     }
+
+    .title-rtm::after {
+      content: '';
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 3px;
+      background-color: #3498db;
+      transform: scaleX(0);
+      transform-origin: bottom right;
+      transition: transform 0.3s ease-out;
+    }
+
+    .title-rtm:hover::after {
+      transform: scaleX(1);
+      transform-origin: bottom left;
+    }
+
   </style>
 </head>
 <body>
   <div class="container mt-5">
-    <h1 class="text-center mb-4">
-      <span class="text-black">Portal Principal - </span><span class="rainbow-word">RTM</span>
-    </h1>
+    <h1 class="title-rtm mb-4">Portal Principal - RTM</h1>
     <div class="row g-4">
       <div class="col-md-6">
         <a href="Coordenadas.html" class="btn btn-primary w-100 btn-lg">📍 Actualizar Coordenadas</a>
