--- a/index.html
+++ b/index.html
@@ -23,6 +23,52 @@
       font-size: 1.2rem;
     }
 
+    /* Colores personalizados para los botones */
+    .btn-primary {
+      background-color: #4a90e2; /* Color personalizado para el botón de actualizar coordenadas */
+      border-color: #4a90e2;
+    }
+    .btn-primary:hover {
+      background-color: #357ab7;
+      border-color: #357ab7;
+    }
+
+    .btn-success {
+      background-color: #28a745; /* Color personalizado para el botón de actualizar nombre y dirección */
+      border-color: #28a745;
+    }
+    .btn-success:hover {
+      background-color: #218838;
+      border-color: #218838;
+    }
+
+    .btn-warning {
+      background-color: #f39c12; /* Color personalizado para el botón de actualizar frecuencia de visita */
+      border-color: #f39c12;
+    }
+    .btn-warning:hover {
+      background-color: #e67e22;
+      border-color: #e67e22;
+    }
+
+    .btn-danger {
+      background-color: #e74c3c; /* Color personalizado para el botón de eliminar cliente */
+      border-color: #e74c3c;
+    }
+    .btn-danger:hover {
+      background-color: #c0392b;
+      border-color: #c0392b;
+    }
+
+    .btn-info {
+      background-color: #17a2b8; /* Color personalizado para el botón de crear cliente nuevo */
+      border-color: #17a2b8;
+    }
+    .btn-info:hover {
+      background-color: #138496;
+      border-color: #138496;
+    }
+
     .card {
       border-radius: 20px;
       box-shadow: 0 10px 25px rgba(0, 0, 0, 0.3);
