--- a/Coordenadas.html
+++ b/Coordenadas.html
@@ -18,14 +18,27 @@
       color: #155724 !important;
       font-weight: bold;
     }
+
     footer {
-      background-color: #0b0b0b;
-      padding: 20px 0;
-      margin-top: 50px;
+      background-color: #000;
+      padding: 20px;
+      color: white;
       text-align: center;
     }
-    footer img {
-      max-height: 60px;
+
+    .footer-content {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 15px;
+    }
+
+    .footer-left-img {
+      max-height: 40px;
+    }
+
+    footer p {
+      margin: 0;
     }
   </style>
   <script>
@@ -158,8 +171,10 @@
   </div>
 
   <footer>
-    <img src="ChatGPT Image 22 abr 2025 08_25_00.png" alt="Logo RTM" />
-    <p class="text-white mt-2 mb-0">© 2025 BIA HONDURAS • Todos los derechos reservados</p>
+    <div class="footer-content">
+      <img src="bia_logo.png" alt="Logo Izquierdo" class="footer-left-img">
+      <p>© 2025 BIA HONDURAS • Todos los derechos reservados</p>
+    </div>
   </footer>
 </body>
 </html>
