--- a/crear_cliente.html
+++ b/crear_cliente.html
@@ -222,9 +222,11 @@
     </form>
   </div>
 
-  <footer>
-    <img src="ChatGPT Image 22 abr 2025 08_25_00.png" alt="Logo RTM" />
-    <p class="text-muted mt-2 mb-0">© 2025 BIA HONDURAS • Todos los derechos reservados</p>
+    <footer>
+    <div class="footer-content">
+      <img src="bia_logo.png" alt="Logo Izquierdo" class="footer-left-img">
+      <p>© 2025 BIA HONDURAS • Todos los derechos reservados</p>
+    </div>
   </footer>
 </body>
 </html>
