--- a/crear_cliente.html
+++ b/crear_cliente.html
@@ -18,11 +18,12 @@
       color: #155724 !important;
       font-weight: bold;
     }
-    footer {
-      background-color: #f1f1f1;
-      padding: 20px 0;
-      margin-top: 50px;
+      footer {
+      background-color: #000;
+      padding: 20px;
+      color: white;
       text-align: center;
+    }
     }
     footer img {
       max-height: 60px;
