--- a/crear_cliente.html
+++ b/crear_cliente.html
@@ -18,15 +18,26 @@
       color: #155724 !important;
       font-weight: bold;
     }
-      footer {
+   footer {
       background-color: #000;
       padding: 20px;
       color: white;
       text-align: center;
     }
+
+    .footer-content {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 15px;
     }
-    footer img {
-      max-height: 60px;
+
+    .footer-left-img {
+      max-height: 40px;
+    }
+
+    footer p {
+      margin: 0;
     }
   </style>
 
