--- a/eliminar_cliente.html
+++ b/eliminar_cliente.html
@@ -32,6 +32,30 @@
       background-size: 20px;
       padding-left: 30px;
     }
+
+   footer {
+      background-color: #000;
+      padding: 20px;
+      color: white;
+      text-align: center;
+    }
+
+    .footer-content {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 15px;
+    }
+
+    .footer-left-img {
+      max-height: 40px;
+    }
+
+    footer p {
+      margin: 0;
+    }
+
+    
   </style>
 </head>
 <body>
@@ -133,6 +157,14 @@
     }
   </script>
 </body>
+  <footer>
+    <div class="footer-content">
+      <img src="bia_logo.png" alt="Logo Izquierdo" class="footer-left-img">
+      <p>© 2025 BIA HONDURAS • Todos los derechos reservados</p>
+    </div>
+  </footer>
+
+  
 </html>
 
 
