--- a/frecuencia_visita.html
+++ b/frecuencia_visita.html
@@ -7,6 +7,30 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     .floating-btn { position: fixed; bottom: 20px; right: 20px; z-index: 999; }
+
+   footer {
+      background-color: #000;
+      padding: 20px;
+      color: white;
+      text-align: center;
+    }
+
+    .footer-content {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 15px;
+    }
+
+    .footer-left-img {
+      max-height: 40px;
+    }
+
+    footer p {
+      margin: 0;
+    }
+
+    
   </style>
 </head>
 <body>
@@ -128,5 +152,12 @@
     }
   </script>
 </body>
+    <footer>
+    <div class="footer-content">
+      <img src="bia_logo.png" alt="Logo Izquierdo" class="footer-left-img">
+      <p>© 2025 BIA HONDURAS • Todos los derechos reservados</p>
+    </div>
+  </footer>
+
 </html>
 
