--- a/nombre_direccion.html
+++ b/nombre_direccion.html
@@ -12,6 +12,30 @@
       right: 20px;
       z-index: 999;
     }
+
+   footer {
+      background-color: #000;
+      padding: 20px;
+      color: white;
+      text-align: center;
+    }
+
+    .footer-content {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 15px;
+    }
+
+    .footer-left-img {
+      max-height: 40px;
+    }
+
+    footer p {
+      margin: 0;
+    }
+
+    
   </style>
 </head>
 <body>
@@ -109,7 +133,17 @@
     });
   </script>
 
+  <footer>
+    <div class="footer-content">
+      <img src="bia_logo.png" alt="Logo Izquierdo" class="footer-left-img">
+      <p>© 2025 BIA HONDURAS • Todos los derechos reservados</p>
+    </div>
+  </footer>
+
+  
 </body>
+
+  
 </html>
 
 
