--- a/Coordenadas.html
+++ b/Coordenadas.html
@@ -6,6 +6,21 @@
   <title>Formulario con Coordenadas</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
+    html, body {
+  height: 100%;
+  margin: 0;
+  background-image: url('fondo.png');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+  color: rgb(8, 0, 0);
+}
+
+.container {
+  flex: 1;
+}
     .readonly {
       background-color: #e9ecef;
       border: 2px dashed #adb5bd;
