--- a/eliminar_cliente.html
+++ b/eliminar_cliente.html
@@ -6,6 +6,21 @@
   <title>Eliminar Cliente</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
+    html, body {
+  height: 100%;
+  margin: 0;
+  background-image: url('fondo.png');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+  color: rgb(8, 0, 0);
+}
+
+.container {
+  flex: 1;
+}
     .floating-btn { position: fixed; bottom: 20px; right: 20px; z-index: 999; }
     #foto-error { display: none; }
 
