--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 <body>
   <div class="container mt-5">
     <h1 class="text-center mb-4">
-      <span class="text-black">Portal Principal - </span><span class="rainbow-word">RTM</span>
+      <span class="text-black">Gestión de Clientes - </span><span class="rainbow-word">RTM</span>
     </h1>
     <div class="row g-4">
       <div class="col-md-6">
