--- a/nombre_direccion.html
+++ b/nombre_direccion.html
@@ -62,11 +62,12 @@
         <label for="codigo" class="form-label">Código del Cliente:</label>
         <input type="text" class="form-control" id="codigo" required>
       </div>
+      
+<div class="mb-3">
+  <label for="nombreActual" class="form-label">Nombre Actual del Cliente:</label>
+  <input type="text" class="form-control" id="nombreActual" readonly style="background-color: #e9ecef;">
+</div>
 
-      <div class="mb-3">
-        <label for="nombreActual" class="form-label">Nombre Actual del Cliente:</label>
-        <input type="text" class="form-control" id="nombreActual" readonly>
-      </div>
 
       <div class="mb-3">
         <label for="nombre" class="form-label">Nuevo Nombre:</label>
