--- a/frecuencia_visita.html
+++ b/frecuencia_visita.html
@@ -57,7 +57,7 @@ html, body {
 
       <div class="mb-3">
         <label for="codigo" class="form-label">Código del Cliente:</label>
-        <input type="text" class="form-control" id="codigo">
+        <input type="text" class="form-control" id="codigo" required>
       </div>
       
 <div class="mb-3">
