--- a/eliminar_cliente.html
+++ b/eliminar_cliente.html
@@ -101,7 +101,7 @@
         <input type="file" class="form-control" id="foto" accept="image/jpeg" onchange="validarFoto()" required>
         <small id="foto-error" class="form-text text-danger">⚠️ Solo se permite archivos .jpg y hasta 10MB.</small>
       </div>
-      <button type="submit" class="btn w-100">📤Enviar</button>
+      <button type="submit" class="btn btn-primary w-100">📤Enviar</button>
     </form>
   </div>
 
