--- a/nombre_direccion.html
+++ b/nombre_direccion.html
@@ -65,7 +65,8 @@
       
 <div class="mb-3">
   <label for="nombreActual" class="form-label">Nombre Actual del Cliente:</label>
-  <input type="text" class="form-control" id="nombreActual" readonly style="background-color: #e9ecef;">
+  <input type="text" class="form-control" id="nombreActual" readonly 
+         style="background-color: #ced4da; border: 2px dashed #6c757d;">
 </div>
 
 
