--- a/eliminar_cliente.html
+++ b/eliminar_cliente.html
@@ -87,7 +87,7 @@
       
       <div class="mb-3">
         <label for="ruta" class="form-label">Ruta:</label>
-        <input type="text" class="form-control" id="ruta" maxlength="3" pattern="\d{1,3}" required>
+        <input type="number" class="form-control" id="ruta" maxlength="3" pattern="\d{1,3}" required>
       </div>
       <div class="mb-3">
         <label for="motivo" class="form-label">Motivo de Cierre:</label>
