--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         <a href="nombre_direccion.html" class="btn btn-success w-100 btn-lg">📝 Actualizar Nombre y Dirección</a>
       </div>
       <div class="col-md-6">
-        <a href="frecuencia_visita.html" class="btn btn-warning w-100 btn-lg">📆 Actualizar Ruta y Frecuencia de Visita</a>
+        <a href="frecuencia_visita.html" class="btn btn-warning w-100 btn-lg">📆 Actualizar Ruta y Frecuencia</a>
       </div>
       <div class="col-md-6">
         <a href="eliminar_cliente.html" class="btn btn-danger w-100 btn-lg">❌ Eliminar Cliente</a>
