--- a/frecuencia_visita.html
+++ b/frecuencia_visita.html
@@ -51,7 +51,7 @@ html, body {
 </head>
 <body>
   <div class="container mt-5">
-    <h2 class="text-center mb-4">Actualizar Ruta y Frecuencia de Visita</h2>
+    <h2 class="text-center mb-4">Actualizar Ruta y Frecuencia</h2>
     <form class="shadow p-4 rounded bg-light" onsubmit="event.preventDefault(); enviarFrecuenciaVisita();">
 
 
