--- a/nombre_direccion.html
+++ b/nombre_direccion.html
@@ -7,28 +7,22 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     html, body {
-  height: 100%;
-  margin: 0;
-  background-image: url('fondo.png');
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  display: flex;
-  flex-direction: column;
-  color: rgb(8, 0, 0);
-}
-
-.container {
-  flex: 1;
-}
-    .floating-btn {
-      position: fixed;
-      bottom: 20px;
-      right: 20px;
-      z-index: 999;
+      height: 100%;
+      margin: 0;
+      background-image: url('fondo.png');
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      display: flex;
+      flex-direction: column;
+      color: rgb(8, 0, 0);
     }
 
-   footer {
+    .container {
+      flex: 1;
+    }
+
+    footer {
       background-color: #000;
       padding: 20px;
       color: white;
@@ -49,8 +43,6 @@
     footer p {
       margin: 0;
     }
-
-    
   </style>
 </head>
 <body>
@@ -63,12 +55,11 @@
         <input type="text" class="form-control" id="codigo" required>
       </div>
       
-<div class="mb-3">
-  <label for="nombreActual" class="form-label">Nombre Actual del Cliente:</label>
-  <input type="text" class="form-control" id="nombreActual" readonly 
-         style="background-color: #ced4da; border: 2px dashed #6c757d;">
-</div>
-
+      <div class="mb-3">
+        <label for="nombreActual" class="form-label">Nombre Actual del Cliente:</label>
+        <input type="text" class="form-control" id="nombreActual" readonly 
+               style="background-color: #ced4da; border: 2px dashed #6c757d;">
+      </div>
 
       <div class="mb-3">
         <label for="nombre" class="form-label">Nuevo Nombre:</label>
@@ -84,15 +75,52 @@
     </form>
   </div>
 
+  <!-- Modal de Éxito -->
+  <div class="modal fade" id="modalExito" tabindex="-1" aria-labelledby="modalExitoLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content border-success">
+        <div class="modal-header bg-success text-white">
+          <h5 class="modal-title" id="modalExitoLabel">¡Envío Exitoso!</h5>
+          <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+        </div>
+        <div class="modal-body text-center fs-5 text-success">
+          Los datos han sido enviados correctamente.
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-success" data-bs-dismiss="modal">Aceptar</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Modal de Error -->
+  <div class="modal fade" id="modalError" tabindex="-1" aria-labelledby="modalErrorLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content border-danger">
+        <div class="modal-header bg-danger text-white">
+          <h5 class="modal-title" id="modalErrorLabel">¡Error al Enviar!</h5>
+          <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+        </div>
+        <div class="modal-body text-center fs-5 text-danger">
+          Ocurrió un problema al guardar los datos. Intenta nuevamente.
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cerrar</button>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <script>
+    const urlClientes = "clientes.json";
+
     function enviarNombreDireccion() {
-      const codigo = document.getElementById("codigo").value;
-      const nombre = document.getElementById("nombre").value;
-      const direccion = document.getElementById("direccion").value;
+      const codigo = document.getElementById("codigo").value.trim();
+      const nombre = document.getElementById("nombre").value.trim();
+      const direccion = document.getElementById("direccion").value.trim();
 
       if (!codigo || !nombre || !direccion) {
-        alert("⚠️ Por favor completa todos los campos.");
+        new bootstrap.Modal(document.getElementById('modalError')).show();
         return;
       }
 
@@ -108,25 +136,22 @@
         })
       })
       .then(() => {
-        alert("✅ Datos enviados correctamente.");
+        new bootstrap.Modal(document.getElementById('modalExito')).show();
         document.getElementById("codigo").value = "";
         document.getElementById("nombre").value = "";
         document.getElementById("direccion").value = "";
         document.getElementById("nombreActual").value = "";
       })
-      .catch(error => {
-        alert("❌ Error al enviar los datos: " + error);
+      .catch(() => {
+        new bootstrap.Modal(document.getElementById('modalError')).show();
       });
     }
-
-    // Cambia esta URL por la real de tu archivo clientes.json en GitHub
-    const urlClientes = "clientes.json";
 
     document.getElementById("codigo").addEventListener("input", async function() {
       const codigoIngresado = this.value.trim();
       const nombreActualInput = document.getElementById("nombreActual");
 
-      if (codigoIngresado.length === 0) {
+      if (!codigoIngresado) {
         nombreActualInput.value = "";
         return;
       }
@@ -134,17 +159,11 @@
       try {
         const response = await fetch(urlClientes);
         const clientes = await response.json();
-
-        const clienteEncontrado = clientes.find(c => c.codigo === codigoIngresado);
-
-        if (clienteEncontrado) {
-          nombreActualInput.value = clienteEncontrado.nombre;
-        } else {
-          nombreActualInput.value = "Cliente no encontrado";
-        }
+        const cliente = clientes.find(c => c.codigo === codigoIngresado);
+        nombreActualInput.value = cliente ? cliente.nombre : "Cliente no encontrado";
       } catch (error) {
-        console.error("Error al cargar clientes.json:", error);
         nombreActualInput.value = "Error al buscar";
+        console.error("Error al cargar clientes.json:", error);
       }
     });
   </script>
@@ -156,10 +175,8 @@
     </div>
   </footer>
 
-  
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
-
-  
 </html>
 
 
