--- a/crear_cliente.html
+++ b/crear_cliente.html
@@ -38,8 +38,23 @@
     footer p {
       margin: 0;
     }
+    .modal-content {
+      border-radius: 10px;
+    }
+    .modal-header {
+      background-color: #28a745;
+      color: white;
+    }
+    .modal-footer {
+      background-color: #fff;
+      text-align: center;
+    }
+    .modal-footer .btn {
+      color: black;
+      background-color: #ffffff;
+      border: 2px solid #28a745;
+    }
   </style>
-
   <script>
     function obtenerCoordenadas() {
       const inputLat = document.getElementById("coordenadas");
@@ -115,6 +130,9 @@
       })
       .then(() => {
         showToast("✅ Cliente creado exitosamente.", "success");
+        // Mostrar modal de éxito
+        const modal = new bootstrap.Modal(document.getElementById('successModal'));
+        modal.show();
         document.querySelector("form").reset();
         document.getElementById("coordenadas").classList.remove("completo");
       })
@@ -136,7 +154,7 @@
 
       <div class="mb-3">
         <label for="ruta" class="form-label">Ruta:</label>
-        <input type="number" class="form-control" id="ruta" name="ruta" required>
+        <input type="text" class="form-control" id="ruta" name="ruta" required maxlength="3" pattern="\d{3}" title="Solo números, máximo 3 caracteres" oninput="this.setCustomValidity('')" />
       </div>
 
       <div class="mb-3">
@@ -176,17 +194,17 @@
 
       <div class="mb-3">
         <label for="id" class="form-label">Número de Identidad:</label>
-        <input type="text" class="form-control" id="id" maxlength="13" required>
+        <input type="text" class="form-control" id="id" maxlength="13" required pattern="\d{13}" title="Solo números, máximo 13 caracteres" />
       </div>
 
       <div class="mb-3">
         <label for="rtn" class="form-label">RTN (opcional):</label>
-        <input type="text" class="form-control" id="rtn" maxlength="14">
+        <input type="text" class="form-control" id="rtn" maxlength="14" pattern="\d{14}" title="Solo números, máximo 14 caracteres" />
       </div>
 
       <div class="mb-3">
         <label for="telefono" class="form-label">Teléfono (opcional):</label>
-        <input type="tel" class="form-control" id="telefono" maxlength="8">
+        <input type="text" class="form-control" id="telefono" maxlength="8" pattern="\d{8}" title="Solo números, máximo 8 caracteres" />
       </div>
 
       <div class="mb-3">
@@ -200,16 +218,35 @@
     </form>
   </div>
 
-  <div id="toast-container"></div>
+  <!-- Modal de éxito -->
+  <div class="modal fade" id="successModal" tabindex="-1" aria-labelledby="successModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="successModalLabel">¡Éxito!</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+          El cliente ha sido creado correctamente.
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-light" data-bs-dismiss="modal">Aceptar</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div id="toast-container" class="position-fixed top-0 end-0 p-3"></div>
 
   <footer>
     <div class="footer-content">
-      <img src="bia_logo.png" alt="Logo Izquierdo" class="footer-left-img">
-      <p>© 2025 BIA HONDURAS • Todos los derechos reservados</p>
+      <img src="logo.png" alt="Logo" class="footer-left-img">
+      <p>&copy; © 2025 BIA HONDURAS • Todos los derechos reservados</p>
     </div>
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
