--- a/crear_cliente.html
+++ b/crear_cliente.html
@@ -240,8 +240,8 @@
 
   <footer>
     <div class="footer-content">
-      <img src="logo.png" alt="Logo" class="footer-left-img">
-      <p>&copy; © 2025 BIA HONDURAS • Todos los derechos reservados</p>
+      <img src="bia_logo.png" alt="Logo" class="footer-left-img">
+      <p>© 2025 BIA HONDURAS • Todos los derechos reservados</p>
     </div>
   </footer>
 
