--- a/crear_cliente.html
+++ b/crear_cliente.html
@@ -154,7 +154,7 @@
 
       <div class="mb-3">
         <label for="ruta" class="form-label">Ruta:</label>
-        <input type="text" class="form-control" id="ruta" name="ruta" required maxlength="3" pattern="\d{3}" title="Solo números, máximo 3 caracteres" oninput="this.setCustomValidity('')" />
+        <input type="number" class="form-control" id="ruta" name="ruta" required maxlength="3" pattern="\d{3}" title="Solo números, máximo 3 caracteres" oninput="this.setCustomValidity('')" />
       </div>
 
       <div class="mb-3">
@@ -194,17 +194,17 @@
 
       <div class="mb-3">
         <label for="id" class="form-label">Número de Identidad:</label>
-        <input type="text" class="form-control" id="id" maxlength="13" required pattern="\d{13}" title="Solo números, máximo 13 caracteres" />
+        <input type="number" class="form-control" id="id" maxlength="13" required pattern="\d{13}" title="Solo números, máximo 13 caracteres" />
       </div>
 
       <div class="mb-3">
         <label for="rtn" class="form-label">RTN (opcional):</label>
-        <input type="text" class="form-control" id="rtn" maxlength="14" pattern="\d{14}" title="Solo números, máximo 14 caracteres" />
+        <input type="number" class="form-control" id="rtn" maxlength="14" pattern="\d{14}" title="Solo números, máximo 14 caracteres" />
       </div>
 
       <div class="mb-3">
         <label for="telefono" class="form-label">Teléfono (opcional):</label>
-        <input type="text" class="form-control" id="telefono" maxlength="8" pattern="\d{8}" title="Solo números, máximo 8 caracteres" />
+        <input type="number" class="form-control" id="telefono" maxlength="8" pattern="\d{8}" title="Solo números, máximo 8 caracteres" />
       </div>
 
       <div class="mb-3">
