--- a/crear_cliente.html
+++ b/crear_cliente.html
@@ -192,10 +192,10 @@
         </select>
       </div>
 
-      <div class="mb-3">
-        <label for="id" class="form-label">Número de Identidad:</label>
-        <input type="number" class="form-control" id="id" maxlength="13" required pattern="\d{13}" title="Solo números, máximo 13 caracteres" />
-      </div>
+    <div class="mb-3">
+  <label for="id" class="form-label">Número de Identidad:</label>
+  <input type="text" class="form-control" id="id" maxlength="13" required pattern="\d{1,13}" title="Solo números, máximo 13 caracteres" />
+</div>
 
       <div class="mb-3">
         <label for="rtn" class="form-label">RTN (opcional):</label>
