--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Gestión de Clientes - RTM</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
   <style>
     html, body {
       height: 100%;
       margin: 0;
-      background-image: url('fondo.png'); /* Usa aquí el nombre real del archivo */
+      background-image: url('fondo.png');
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
@@ -23,51 +24,20 @@
       font-size: 1.2rem;
     }
 
-    /* Colores personalizados para los botones */
-    .btn-primary {
-      background-color: #4a90e2; /* Color personalizado para el botón de actualizar coordenadas */
-      border-color: #4a90e2;
-    }
-    .btn-primary:hover {
-      background-color: #357ab7;
-      border-color: #357ab7;
-    }
+    .btn-primary { background-color: #4a90e2; border-color: #4a90e2; }
+    .btn-primary:hover { background-color: #357ab7; border-color: #357ab7; }
 
-    .btn-success {
-      background-color: #28a745; /* Color personalizado para el botón de actualizar nombre y dirección */
-      border-color: #28a745;
-    }
-    .btn-success:hover {
-      background-color: #218838;
-      border-color: #218838;
-    }
+    .btn-success { background-color: #28a745; border-color: #28a745; }
+    .btn-success:hover { background-color: #218838; border-color: #218838; }
 
-    .btn-warning {
-      background-color: #f39c12; /* Color personalizado para el botón de actualizar frecuencia de visita */
-      border-color: #f39c12;
-    }
-    .btn-warning:hover {
-      background-color: #e67e22;
-      border-color: #e67e22;
-    }
+    .btn-warning { background-color: #f39c12; border-color: #f39c12; }
+    .btn-warning:hover { background-color: #e67e22; border-color: #e67e22; }
 
-    .btn-danger {
-      background-color: #e74c3c; /* Color personalizado para el botón de eliminar cliente */
-      border-color: #e74c3c;
-    }
-    .btn-danger:hover {
-      background-color: #c0392b;
-      border-color: #c0392b;
-    }
+    .btn-danger { background-color: #e74c3c; border-color: #e74c3c; }
+    .btn-danger:hover { background-color: #c0392b; border-color: #c0392b; }
 
-    .btn-info {
-      background-color: #17a2b8; /* Color personalizado para el botón de crear cliente nuevo */
-      border-color: #17a2b8;
-    }
-    .btn-info:hover {
-      background-color: #138496;
-      border-color: #138496;
-    }
+    .btn-info { background-color: #17a2b8; border-color: #17a2b8; }
+    .btn-info:hover { background-color: #138496; border-color: #138496; }
 
     .card {
       border-radius: 20px;
@@ -105,7 +75,6 @@
       margin: 0;
     }
 
-    /* Título con efecto arcoíris */
     .title-rtm {
       font-size: 3rem;
       font-weight: bold;
@@ -126,44 +95,159 @@
       100% { background-position: 0% 50%; }
     }
 
-    /* Texto en negro para la parte de Portal Principal */
     .text-black {
       color: black;
+    }
+
+    /* LOGIN STYLES */
+    #login-overlay {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100vw; height: 100vh;
+      background: rgba(0,0,0,0.7);
+      z-index: 9999;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    #login-box {
+      background: white;
+      padding: 40px;
+      border-radius: 15px;
+      width: 90%;
+      max-width: 400px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.3);
+      text-align: center;
+    }
+
+    #login-box h2 {
+      margin-bottom: 20px;
+      font-weight: bold;
+    }
+
+    #login-box input {
+      margin-bottom: 15px;
+    }
+
+    #login-error {
+      color: red;
+      font-size: 0.9rem;
+      display: none;
+    }
+
+    /* BOTÓN CERRAR SESIÓN */
+    #logout-btn {
+      position: fixed;
+      top: 20px;
+      right: 20px;
+      z-index: 9998;
+      background-color: #dc3545;
+      color: white;
+      border: none;
+      border-radius: 30px;
+      padding: 10px 15px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+      cursor: pointer;
+      display: none;
+    }
+
+    #logout-btn:hover {
+      background-color: #c82333;
     }
   </style>
 </head>
 <body>
-  <div class="container mt-5">
-    <h1 class="text-center mb-4">
-      <span class="text-black">Gestión de Clientes - </span><span class="rainbow-word">RTM</span>
-    </h1>
-    <div class="row g-4">
-      <div class="col-md-6">
-        <a href="Coordenadas.html" class="btn btn-primary w-100 btn-lg">📍 Actualizar Coordenadas</a>
-      </div>
-      <div class="col-md-6">
-        <a href="nombre_direccion.html" class="btn btn-success w-100 btn-lg">📝 Actualizar Nombre y Dirección</a>
-      </div>
-      <div class="col-md-6">
-        <a href="frecuencia_visita.html" class="btn btn-warning w-100 btn-lg">📆 Actualizar Ruta y Frecuencia</a>
-      </div>
-      <div class="col-md-6">
-        <a href="eliminar_cliente.html" class="btn btn-danger w-100 btn-lg">❌ Eliminar Cliente</a>
-      </div>
-      <div class="col-md-12">
-        <a href="crear_cliente.html" class="btn btn-info w-100 btn-lg">➕ Crear Cliente Nuevo</a>
-      </div>
+
+<!-- BOTÓN CERRAR SESIÓN -->
+<button id="logout-btn">Cerrar Sesión</button>
+
+<!-- LOGIN -->
+<div id="login-overlay">
+  <div id="login-box">
+    <h2>Iniciar Sesión</h2>
+    <form id="login-form">
+      <input type="text" id="username" class="form-control" placeholder="Usuario" required>
+      <input type="password" id="password" class="form-control" placeholder="Contraseña" required>
+      <div id="login-error">Usuario o contraseña incorrectos</div>
+      <button type="submit" class="btn btn-primary mt-3 w-100">Entrar</button>
+    </form>
+  </div>
+</div>
+
+<!-- CONTENIDO PRINCIPAL -->
+<div class="container mt-5">
+  <h1 class="text-center mb-4">
+    <span class="text-black">Gestión de Clientes - </span><span class="rainbow-word">RTM</span>
+  </h1>
+  <div class="row g-4">
+    <div class="col-md-6">
+      <a href="Coordenadas.html" class="btn btn-primary w-100 btn-lg">📍 Actualizar Coordenadas</a>
+    </div>
+    <div class="col-md-6">
+      <a href="nombre_direccion.html" class="btn btn-success w-100 btn-lg">📝 Actualizar Nombre y Dirección</a>
+    </div>
+    <div class="col-md-6">
+      <a href="frecuencia_visita.html" class="btn btn-warning w-100 btn-lg">📆 Actualizar Ruta y Frecuencia</a>
+    </div>
+    <div class="col-md-6">
+      <a href="eliminar_cliente.html" class="btn btn-danger w-100 btn-lg">❌ Eliminar Cliente</a>
+    </div>
+    <div class="col-md-12">
+      <a href="crear_cliente.html" class="btn btn-info w-100 btn-lg">➕ Crear Cliente Nuevo</a>
     </div>
   </div>
+</div>
 
-  <footer>
-    <div class="footer-content">
-      <img src="bia_logo.png" alt="Logo Izquierdo" class="footer-left-img">
-      <p>© 2025 BIA HONDURAS • Todos los derechos reservados</p>
-    </div>
-  </footer>
+<!-- FOOTER -->
+<footer>
+  <div class="footer-content">
+    <img src="bia_logo.png" alt="Logo Izquierdo" class="footer-left-img">
+    <p>© 2025 BIA HONDURAS • Todos los derechos reservados</p>
+  </div>
+</footer>
+
+<!-- LOGIN SCRIPT -->
+<script>
+  window.addEventListener('DOMContentLoaded', () => {
+    const session = localStorage.getItem('rtmLogin');
+    const logoutBtn = document.getElementById('logout-btn');
+
+    if (session) {
+      const sessionData = JSON.parse(session);
+      const now = new Date().getTime();
+      if (now < sessionData.expiry) {
+        document.getElementById('login-overlay').style.display = 'none';
+        logoutBtn.style.display = 'block';
+      }
+    }
+  });
+
+  document.getElementById('login-form').addEventListener('submit', function(e) {
+    e.preventDefault();
+    const username = document.getElementById('username').value.trim();
+    const password = document.getElementById('password').value.trim();
+    const errorDiv = document.getElementById('login-error');
+
+    if (username === 'comercial' && password === 'Bia2025') {
+      const expiry = new Date().getTime() + 24 * 60 * 60 * 1000;
+      localStorage.setItem('rtmLogin', JSON.stringify({ expiry }));
+      document.getElementById('login-overlay').style.display = 'none';
+      document.getElementById('logout-btn').style.display = 'block';
+    } else {
+      errorDiv.style.display = 'block';
+    }
+  });
+
+  document.getElementById('logout-btn').addEventListener('click', () => {
+    localStorage.removeItem('rtmLogin');
+    location.reload();
+  });
+</script>
+
 </body>
 </html>
+
 
 
 
